adding the authentication and authorization based on JWT.

--- a/IrmaosDeRua/IrmaosDeRua.Auth.Domain/IrmaosDeRua.Auth.Domain.csproj
+++ b/IrmaosDeRua/IrmaosDeRua.Auth.Domain/IrmaosDeRua.Auth.Domain.csproj
@@ -6,9 +6,18 @@
 
   <ItemGroup>
     <PackageReference Include="CSharpFunctionalExtensions" Version="2.3.0" />
+    <PackageReference Include="MediatR" Version="8.0.1" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="8.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.2" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="3.1.2" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.2" />
     <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="3.1.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\IrmaosDeRua.Auth.Shared\IrmaosDeRua.Auth.Shared.csproj" />
+    <ProjectReference Include="..\IrmaosDeRua.Crosscutting\IrmaosDeRua.Crosscutting.csproj" />
   </ItemGroup>
 
 </Project>
