--- a/IrmaosDeRua/IrmaosDeRua.API/IrmaosDeRua.API.csproj
+++ b/IrmaosDeRua/IrmaosDeRua.API/IrmaosDeRua.API.csproj
@@ -5,19 +5,17 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <PackageReference Include="MediatR" Version="8.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.2">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.1" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\IrmaosDeRua.Auth.Data\IrmaosDeRua.Auth.Data.csproj" />
+    <ProjectReference Include="..\IrmaosDeRua.Auth.API\IrmaosDeRua.Auth.API.csproj" />
     <ProjectReference Include="..\IrmaosDeRua.Auth.Domain\IrmaosDeRua.Auth.Domain.csproj" />
   </ItemGroup>
 
